--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Install package
         run: npm install
       - name: build app
-        run: npm build
+        run: npm run build
